# PG-SUI

./: .dockerignore  .gitignore  .gitignore.swp  .readthedocs.yaml  37inds_popmap.txt  Dockerfile  MANIFEST.in  README.md  UBP.py  UBP_notes.txt  __init__.py  c0.1_s0.9.tre  c0.2_s0.8.tre  c0.3_s0.7.tre  c0.4_s0.6.tre  c0.5_s0.5.tre  c0.6_s0.4.tre  c0.7_s0.3.tre  c0.8_s0.2.tre  c0.9_s0.1.tre  changelog.md  datastruct.py  environment.yml  makePopMap.rst  memprofiler_super_deli_ntrees100_maxdepth15.py  memprofiler_super_deli_ntrees100_maxdepth25.py  memprofiler_super_deli_ntrees100_maxdepth35.py  memprofiler_super_deli_ntrees100_maxdepth5.py  memprofiler_super_deli_ntrees150_maxdepth15.py  memprofiler_super_deli_ntrees150_maxdepth25.py  memprofiler_super_deli_ntrees150_maxdepth35.py  memprofiler_super_deli_ntrees150_maxdepth5.py  memprofiler_super_deli_ntrees200_maxdepth15.py  memprofiler_super_deli_ntrees200_maxdepth25.py  memprofiler_super_deli_ntrees200_maxdepth35.py  memprofiler_super_deli_ntrees200_maxdepth5.py  memprofiler_super_deli_ntrees50_maxdepth15.py  memprofiler_super_deli_ntrees50_maxdepth25.py  memprofiler_super_deli_ntrees50_maxdepth35.py  memprofiler_super_deli_ntrees50_maxdepth5.py  (+24 more)
.github/workflows/: ci.yaml  conda.yaml  docker.yaml  release.yaml  unit-tests.yaml
clustering/: clustering.py  kmeans.py
conda/recipe/: bld.bat  build.sh  conda_build_config.yaml  meta.yaml
configs/: config.yaml
decision_trees/: xgboost.py
delimitation_methods/: delimitation_model.py  model_results.py  xgboost.py
dim_reduction/: DEPRECATED_dim_reduction.py  dim_reduction.py  dim_reduction2.py  embed.py  pca.py
docs/: pyproject.toml
docs/old/_build/: .buildinfo
docs/old/_build/.doctrees/: PG-SUI.doctree  PG-SUI.impute.doctree  PG-SUI.read_input.doctree  environment.pickle  index.doctree  modules.doctree
docs/old/_old/: PG-SUI.impute.rst  PG-SUI.read_input.rst  PG-SUI.rst  modules.rst
docs/old/_source/: conf.py  index.rst
docs/source/: conf.py  index.rst
example_data/imputed/: br_iterative_imputed_012.csv  gb_imputed_imputed_012.csv  gb_iterative_imputed_012.csv  knn_pop_imputed_012.csv  rf_iterative_imputed_012.csv  test_ga_imputer_logfile.txt  test_ga_imputer_progress_log.txt  test_rf_ga_imputer_progress_log.txt
example_data/phylip_files/: test_n100.phy
example_data/popmaps/: test.popmap.rearr.txt
example_data/structure_files/: shuffle.awk  test.nopopmap.str  test.str
example_data/trees/: test.qmat
impute/: DEPRECATED_iterative_imputer_full.py  DEPRECATED_iterative_imputer_gridsearch.py  estimators.py  group_imputer.py  impute.py  iterative_imputer_custom.py  iterative_imputer_fixedparams.py  iterative_imputer_gridsearch.py  neural_network_imputers.py  simple_imputer_custom.py
mem_profiler/profiling/: memprofiler_pg_sui_ntrees100_maxdepth15.py  memprofiler_pg_sui_ntrees100_maxdepth5.py  memprofiler_pg_sui_ntrees150_maxdepth5.py  memprofiler_pg_sui_ntrees200_maxdepth15.py  memprofiler_pg_sui_ntrees50_maxdepth15.py  memprofiler_pg_sui_ntrees50_maxdepth5.py
mem_profiler/profiling_results/: memUsage_profiling_test_ntrees100_maxdepth35.txt  memUsage_profiling_test_ntrees150_maxdepth25.txt  memUsage_profiling_test_ntrees50_maxdepth25.txt
notebooks/: run_pgsui_dev.ipynb  test.ipynb  test_int.txt
output_optimal_ubp_phase1/: saved_model.pb
output_optimal_ubp_phase1/variables/: variables.data-00000-of-00001  variables.index
pgsui/: README.md  README.txt  __init__.py  cli.py  pg_sui.py  pg_sui2.py  pg_sui_simtest.py  pg_sui_testing.py  scalene_pg_sui.py  setup.cfg  setup.py  test_baseEstimator.py  tutorial.rst
pgsui/data_processing/: config.py  containers.py  transformers.py
pgsui/electron/: bootstrap.py  launch.py  package.json
pgsui/figures/: UBP_NN_architecture.ai  UBP_NN_architecture_single_layer.ai  UBP_VAE_NN_architecture.ai
pgsui/impute/: autoencoder_model.py  callbacks.py  estimators.py  gridsearchcv_progressbar.py  impute.py  iterative_imputer_fixedparams.py  iterative_imputer_gridsearch.py  keras_classifiers.py  neural_network_imputers.py  neural_network_methods.py  nlpca_model.py  plotting.py  scorers.py  simple_imputers.py  ubp_model.py  vae_model.py
pgsui/read_input/: popmap_file.py  read_input.py  simgenodata.py  vcf_file.py
pgsui/simulators/: simulate.py
pgsui/test/: pg_sui_simtest.py  test_pgsui.py  testpgsui.sh
pgsui/training_data/: count_seq_filetypes.py  datadryad_data_final.py  datadryad_data_final_metadata.py  datadryad_data_final_speciesdelimitation.py  parse_dryad_data.py  separate_file_types.py
phylo/: tree_imputation.py
profiling/: memprofiler_super_deli_ntrees50_maxdepth35.py  plot_max_memory.py
profiling_results/: memUsage_profiling_test_ntrees150_maxdepth5.txt  memUsage_profiling_test_ntrees200_maxdepth35.txt  memUsage_profiling_test_ntrees50_maxdepth15.txt  plot_max_memory.py
read_input/: DEPRECATED_impute.py  impute.py  iterative_imputer.py  phylip_file.py  popmap_file.py  read_input.py  simgenodata.py  structure_file.py
scripts/: build_gui_dists.zsh  download_training_data.zsh  pg_sui.py  run_iqtree.zsh  start_pgsui.sh  stop_pgsui.sh  summarize_input_metadata.py  vcf2phy.py  vcf2phy.zsh
simulation/: .temp.fasta  .temp.fasta.bionj  .temp.fasta.iqtree  .temp.fasta.mldist  run_sim.py  sim_benchmarks.py  sim_treeparams.py  simulation.py  test.tre
snpiosp/: compare_dataset_stats.py  run_snpiosp.py  snpiosp.py
super_deli_imputer/: DEPRECATED_iterative_imputer_original.py  impute.py  iterative_imputer_custom.py  iterative_imputer_full.py  iterative_imputer_gridsearch.py
test/: pg_sui_testing.py  test.py  test_simulate.py  test_simulate_runscript.py  test_tkc.py
tests/: conftest.py  test_config.py  test_deterministic_imputers.py  test_imputers_unsupervised.py  test_logging.py  test_scorers.py  test_transformers.py
training_data/: concatenateNexus_tkc.py  count_seq_filetypes.py  datadryad_data_final_metadata.py  parse_dryad_data.py  separate_file_types.py
utils/: misc.py  sequence_tools.py  settings.py  tree_tools.py
workflow/: run_sim1.smk  sim1_config.yaml  t0.01_c0.1_a0.0_gtrgamma.phylip
(+152 files in other folders)
