[build-system]
requires = ["setuptools", "pip", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pg-sui"
version = "1.6.0"
description = "Python machine and deep learning API to impute missing genotypes"
readme = "README.md"
authors = [
    {name = "Drs. Bradley T. Martin and Tyler K. Chafin", email = "evobio721@gmail.com"},
]
requires-python = ">=3.11"
maintainers = [
    {name = "Dr. Bradley T. Martin", email = "evobio721@gmail.com"},
]
license = {text = "GNU General Public License v3 (GPLv3)"}
keywords = [
    "impute", "imputation", "AI", "deep learning", "machine learning",
    "neural network", "vae", "autoencoder", "ubp", "nlpca",
    "population genetics", "unsupervised", "supervised", "bioinformatics",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: MacOS",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Unix",
    "Operating System :: POSIX",
    "Natural Language :: English"
]
dependencies = [
    "matplotlib",
    "numpy >=2.1",
    "pandas >=2.2.2",
    "scikit-learn >=1.4",
    "scipy",
    "seaborn",
    "torch",
    "tqdm",
    "toytree",
    "xgboost",
    "optuna",
    "snpio",
]

[tool.setuptools.packages.find]
include = ["pgsui"]
namespaces = false  # Ensures proper package discovery

[project.optional-dependencies]
intel = ["scikit-learn-intelex"]
docs = [
    "sphinx",
    "sphinx-rtd-theme",
    "sphinx_autodoc_typehints",
    "sphinxcontrib-napoleon",
    "sphinxcontrib-programoutput"
]
dev = [
    "twine",
    "wheel",
    "pytest",
    "sphinx",
    "sphinx-rtd-theme",
    "sphinx-autodoc-typehints",
    "sphinxcontrib-napoleon",
    "sphinxcontrib-programoutput",
    "requests",
    "PyObjC"
]
optional = [
    "PyObjC"
]

[project.urls]
Homepage = "https://github.com/btmartin721/PG-SUI"
Documentation = "https://pg-sui.readthedocs.io/en/latest/"
Source = "https://github.com/btmartin721/PG-SUI.git"
BugTracker = "https://github.com/btmartin721/PG-SUI/issues"

[tool.setuptools.package-data]
pgsui = ["example_data/**/*"]


[project.scripts]
pg-sui = "pgsui.cli:main"
