[metadata]
name = PG-SUI
version = 0.1
author = Bradley T. Martin and Tyler K. Chafin
author_email = evobio721@gmail.com
maintainer = Bradley T. Martin
maintainer_email = evobio721@gmail.com
description = Python machine learning API to impute missing SNPs
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/btmartin721/PG-SUI
project_urls = 
    Bug Tracker = https://github.com/btmartin721/PG-SUI/issues
keywords = 
    python
    impute
    imputation
    imputer
    machine learning
    neural network
    api
    IterativeImputer
    vae
    ubp
    nlpca
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Bio-Informatics
    Operating System :: OS Independent
    Natural Language :: English
license = GNU General Public License v3 (GPLv3)

[options]
package_dir = 
    = pgsui
packages = find:
python_requires = >=3.7
install_requires = 
    matplotlib
    seaborn
    jupyterlab
    scikit-learn>=0.24
    tqdm
    pandas>=1.2.5,<1.3.0
    numpy>=1.20.2,<1.21
    scipy>=1.6.2,<1.7
    xgboost
    lightgbm
    tensorflow
    keras
    toytree
    sklearn-genetic-opt[all]>=0.6.0

[options.packages.find]
where = pgsui
exclude = 
    pg_sui.py
    scalene_pg_sui.py
    phylo
    training_data

[options.extras_require]
intel = scikit-learn-intelex

